# python-ecs

./: README.md  pyproject.toml  setup.py
python_ecs/: component.py  component_set.py  demography.py  ecs.py  entity_filter.py  log_system.py  selection_strategy.py  signature.py  system.py  update_status.py  utils.py
python_ecs/provided/: periodic.py  ref.py
python_ecs/storage/: components.py  database.py  database_api.py  demography.py  index.py
tests/: test_ecs.py  test_things.py
